@@ -35,6 +35,7 @@
 - added: `F.currencies.eur = function(val) {}` registers a currency formatter
 - added: usage of currency formatter `Number.currency(currency)`
 - added: new schema type `Number2` with default value is `null`, not zero `0`
+- added: `@{json2(model, elementID, key1, key2, key3)}` can serialize data with keys defined into the `<script type="application/json">`
 
 - updated: `$.invalid()` without arguments can return a function `function(err)`
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
